@@ -42,6 +42,9 @@
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
+      <property name="cornerButtonEnabled">
+       <bool>false</bool>
+      </property>
       <property name="columnCount">
        <number>4</number>
       </property>
