@@ -7,6 +7,7 @@ v9.12.29
 - projectModel: added again the extension checking for the files returned from
   the sequence.getAllAssetFileNamesForType method
 - assetModel: silly codes removed from assetType class
+- assetUpdater: the entries aligned to verticall center also
 
 v9.12.28
 - the CachedMethod and the InputBasedCachedMethod objects now returns more
